--- a/product-details.html
+++ b/product-details.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming - Product Detail</title>
+    <title>DotaShop - Product Detail</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,8 +76,8 @@ https://templatemo.com/tm-589-lugx-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h3>Modern Warfare® II</h3>
-          <span class="breadcrumb"><a href="#">Home</a>  >  <a href="#">Shop</a>  >  Assasin Creed</span>
+          <h3>Učet z arcanou na Pudge</h3>
+          <span class="breadcrumb"><a href="#">Domov</a>  >  <a href="#">Obchod</a>  >  Učet z arcanou na Pudge</span>
         </div>
       </div>
     </div>
@@ -88,21 +88,20 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6">
           <div class="left-image">
-            <img src="assets/images/single-game.jpg" alt="">
+            <img src="assets/images/300.webp" alt="">
           </div>
         </div>
         <div class="col-lg-6 align-self-center">
-          <h4>Call of Duty®: Modern Warfare® II</h4>
+          <h4>Učet z arcanou na Pudge</h4>
           <span class="price"><em>$28</em> $22</span>
-          <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+          <p>Skvelý účet s arkánou Pudge s peknou cenou. K účtu patrí aj e-mailová adresa a plný prístup k účtu. Nemá žiadnu väzbu, takže po zakúpení ho môžete používať ako hlavný</p>
           <form id="qty" action="#">
             <input type="qty" class="form-control" id="1" aria-describedby="quantity" placeholder="1">
-            <button type="submit"><i class="fa fa-shopping-bag"></i> ADD TO CART</button>
+            <button type="submit"><i class="fa fa-shopping-bag"></i> Pridať do košika</button>
           </form>
           <ul>
-            <li><span>Game ID:</span> COD MMII</li>
-            <li><span>Genre:</span> <a href="#">Action</a>, <a href="#">Team</a>, <a href="#">Single</a></li>
-            <li><span>Multi-tags:</span> <a href="#">War</a>, <a href="#">Battle</a>, <a href="#">Royal</a></li>
+            <li><span>Genre:</span> <a href="#">MOBA</a>, <a href="#">Tím</a>,
+            <li><span>Multi-tags:</span> <a href="#">MOBA</a>, <a href="#">Battle</a>, <a href="#">Royal</a></li>
           </ul>
         </div>
         <div class="col-lg-12">
@@ -130,13 +129,10 @@ https://templatemo.com/tm-589-lugx-gaming
               </div>              
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-                  <p>You can search for more templates on Google Search using keywords such as "templatemo digital marketing", "templatemo one-page", "templatemo gallery", etc. Please tell your friends about our website. If you need a variety of HTML templates, you may visit Tooplate and Too CSS websites.</p>
-                  <br>
-                  <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
+                  <p>Viac informácií získate, ak nám zavoláte alebo pošlete e-mail. V prípade, že máte akékoľvek problémy alebo otázky týkajúce sa výrobku, určite nás tiež kontaktujte</p>                  <br>
                 </div>
                 <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                  <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. <br><br>Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
-                </div>
+                  <p>Viac informácií získate, ak nám zavoláte alebo pošlete e-mail. V prípade, že máte akékoľvek problémy alebo otázky týkajúce sa výrobku, určite nás tiež kontaktujte</p>                </div>
               </div>
             </div>
           </div>
@@ -150,52 +146,52 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>Action</h6>
+            <h6>Akcia</h6>
             <h2>Related Games</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop.html">Ukazať všetko</a>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Akcia</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-01.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Manifold_Paradox_3.webp" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Akcia</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Amaterasu.webp" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Akcia</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-03.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Axe_Unleashed.webp" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Akcia</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-04.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Benevolent_Companion.webp" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Akcia</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/dota_item_tales_of_the_ardalan_interdictor_png.png" alt=""></a>
             </div>
           </div>
         </div>
