--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming - Shop Page</title>
+    <title>DotaShop - Shop Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,11 +56,11 @@ https://templatemo.com/tm-589-lugx-gaming
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html" class="active">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                      <li><a href="index.html">Domov</a></li>
+                      <li><a href="shop.html" class="active">Naš obchod</a></li>
+                      <li><a href="product-details.html">Naše produkty</a></li>
+                      <li><a href="contact.html">Kontakt</a></li>
+                      <li><a href="#">Prihlasiť sa</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -77,8 +77,8 @@ https://templatemo.com/tm-589-lugx-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h3>Our Shop</h3>
-          <span class="breadcrumb"><a href="#">Home</a> > Our Shop</span>
+          <h3>Naš obchod</h3>
+          <span class="breadcrumb"><a href="#">Domov </a> > Naš obchod</span>
         </div>
       </div>
     </div>
@@ -88,28 +88,28 @@ https://templatemo.com/tm-589-lugx-gaming
     <div class="container">
       <ul class="trending-filter">
         <li>
-          <a class="is_active" href="#!" data-filter="*">Show All</a>
+          <a class="is_active" href="#!" data-filter="*">Zobraziť všetko</a>
         </li>
         <li>
-          <a href="#!" data-filter=".adv">Adventure</a>
+          <a href="#!" data-filter=".adv">Účty Dota 2</a>
         </li>
         <li>
-          <a href="#!" data-filter=".str">Strategy</a>
+          <a href="#!" data-filter=".str">Predmety</a>
         </li>
         <li>
-          <a href="#!" data-filter=".rac">Racing</a>
+          <a href="#!" data-filter=".rac">Súpravy</a>
         </li>
       </ul>
       <div class="row trending-box">
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Axe_Unleashed.webp" alt=""></a>
               <span class="price"><em>$36</em>$24</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s immortal kožou na Axe(exkluzívne) </h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -117,12 +117,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/dota_item_tales_of_the_ardalan_interdictor_png.png" alt=""></a>
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Immortal koža na Sniper</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -130,12 +130,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv rac">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/f094c527d433098738e4c3c25522b.png" alt=""></a>
               <span class="price"><em>$45</em>$30</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s arcanou na Drow Ranger</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -143,12 +143,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Kunkka_icon.webp" alt=""></a>
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Immortal topanky na Kunnka</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -156,12 +156,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac str">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Manifold_Paradox_3.webp" alt=""></a>
               <span class="price"><em>$38</em>$26</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Zbrane pre Phantom Assasin(exsklusivne)</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -169,12 +169,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac adv">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/wallpaper1_large.jpg" alt=""></a>
               <span class="price"><em>$30</em>$20</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s arcanou na Windranger</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -182,12 +182,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac str">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Amaterasu.webp" alt=""></a>
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Exsklusivne kourier "Amaterasu"</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -195,12 +195,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac adv">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/a242364a648eba295b07cf6770350.jpeg" alt=""></a>
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s arcanou na Spectre</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -208,12 +208,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv rac">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Axe_Unleashed.webp" alt=""></a>
               <span class="price"><em>$28</em>$20</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s arcanou na Axe</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -221,12 +221,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/maxresdefault.jpg" alt=""></a>
               <span class="price"><em>$26</em>$18</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Ruleta (dodatočná položka pri kúpe akéhokoľvek účtu)</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -234,12 +234,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/Cosmetic_icon_Benevolent_Companion.webp" alt=""></a>
               <span class="price"><em>$32</em>$24</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s arcanou na IO</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -247,12 +247,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
+              <a href="product-details.html"><img src="assets/images/300.webp" alt=""></a>
               <span class="price"><em>$45</em>$30</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Akcia</span>
+              <h4>Učet s arcanou na Pudge + náhodná koža</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -275,7 +275,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 DOTASHOP. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
